# attempt

./: .gitignore  404.html  Cargo.toml  README.md  install.html  intro.html  print.html  searchindex.js  toc.html  toc.js  usage.html
.github/: CODEOWNERS
.github/workflows/: ci.yml
.rules/: project.md
appendix/: biblio.html  exit_codes.html  parent.html  scripting.html
backoff/: exponential.html  fixed.html  intro.html  linear.html
docs/: book.toml  experiment.md  scripting.md  scripting.md.bak  usage.md
docs/src/: SUMMARY.md  install.md  intro.md  usage.md
docs/src/appendix/: biblio.md  exit_codes.md  parent.md  scripting.md
docs/src/backoff/: exponential.md  fixed.md  intro.md  linear.md
docs/src/policy/: default.md  intro.md  output.md  retrying.md  signal.md  status.md
docs/src/timing/: intro.md  timeout.md  wait.md
policy/: default.html  intro.html  output.html  retrying.html  signal.html  status.html
src/: arguments.rs  arguments.rs.bak  main.rs  policy.rs  util.rs
src/util/: logger.rs  mock_sleep.rs  mod.rs  pattern.rs  poll.rs  status.rs  testing.rs  value_parsing.rs
tests/: e2e.rs  prop.rs  util.rs
timing/: intro.html  timeout.html  wait.html
