[package]
name = "attempt-cli"
version = "1.1.0"
edition = "2021"
license = "Unlicense"
description = "A CLI for retrying fallible commands"
homepage = "https://github.com/MaxBondABE/attempt"
repository = "https://github.com/MaxBondABE/attempt"
documentation = "https://maxbondabe.github.io/attempt/"
readme = "README.md"
keywords = ["retry", "retrying"]

[[bin]]
name = "attempt"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.4.6", features = ["derive"] }
log = { version = "0.4.22", features = ["std"] }
rand = "0.8.5"
rand_distr = "0.4.3"
regex = "1.9.6"
thiserror = "1.0.49"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
once_cell = "1.18.0"
